--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,7 +16,8 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/statusBarView"/>
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="0dp"/>
 
     <com.josecuentas.library.StatusBar
         android:layout_width="0dp"
